--- a/nginx-deploy.yaml
+++ b/nginx-deploy.yaml
@@ -7,7 +7,7 @@ metadata:
   name: nginx-deploy
   namespace: development
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: nginx-deploy
@@ -19,5 +19,5 @@ spec:
         app: nginx-deploy
     spec:
       containers:
-      - image: docker.io/mdrajibkhan/mysampleimage:32
+      - image: nginx:alpine
         name: nginx
