--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,54 +1,51 @@
 pipeline {
     agent any
-    
+
     environment {
-        DOCKERHUB_CREDENTIALS = 'docker-hub'  // Replace with your Docker Hub credentials ID in Jenkins
-        DOCKER_IMAGE = 'my-nginx-image-easy-test'           // Replace with your desired image name
-        DOCKER_TAG = 'latest'                               // Replace with the desired tag
+        IMAGE_TAG = "p978/mysampleimage:${BUILD_NUMBER}"
     }
 
     stages {
-        stage('Clone Repository') {
+        stage('Pulling the source code') {
             steps {
-                // Manually clone the repository using git
-                sh 'git clone 'https://github.com/Alamgir2121/jenkinsfile-custom-test.git'
+                git branch: 'main', url: 'https://github.com/Alamgir2121/jenkinsfile-custom-test.git'
             }
         }
         
-        stage('Build Docker Image') {
+        stage('Build and Push Docker Image') {
             steps {
-                script {
-                    // Build the Docker image using the Dockerfile in the repository
-                    sh 'docker build -t $DOCKER_IMAGE:$DOCKER_TAG .'
+                withCredentials([usernamePassword(credentialsId: 'docker-hub', passwordVariable: 'DOCKER_HUB_PASSWORD', usernameVariable: 'DOCKER_HUB_USER')]) {
+                    sh """
+                        docker build -t ${IMAGE_TAG} .
+                        docker login -u $DOCKER_HUB_USER -p$DOCKER_HUB_PASSWORD
+                        docker push ${IMAGE_TAG}
+                    """
                 }
             }
         }
         
-        stage('Login to Docker Hub') {
+        stage('Update Kubernetes Manifest') {
             steps {
-                script {
-                    // Login to Docker Hub using credentials stored in Jenkins
-                    withCredentials([usernamePassword(credentialsId: "${DOCKERHUB_CREDENTIALS}", usernameVariable: 'DOCKERHUB_USERNAME', passwordVariable: 'DOCKERHUB_PASSWORD')]) {
-                        sh 'echo $DOCKERHUB_PASSWORD | docker login -u $DOCKERHUB_USERNAME --password-stdin'
-                    }
-                }
+                sh """
+                    sed -i "s#p978/mysampleimage:.*#p978/mysampleimage:${BUILD_NUMBER}#" nginx-deploy.yaml
+                    cat nginx-deploy.yaml
+                """
             }
         }
-        
-        stage('Push Docker Image') {
-            steps {
-                script {
-                    // Push the Docker image to Docker Hub
-                    sh 'docker push $DOCKER_IMAGE:$DOCKER_TAG'
-                }
-            }
-        }
-    }
 
-    post {
-        always {
-            // Clean up Docker images to free space
-            sh 'docker rmi $DOCKER_IMAGE:$DOCKER_TAG || true'
+        stage('Commit and Push Updated Manifest') {
+            steps {
+                withCredentials([string(credentialsId: 'github-token', variable: 'GITHUB_TOKEN')]) {
+                    sh """
+                        git config --global user.email "jenkins@example.com"
+                        git config --global user.name "Jenkins"
+                        git add .
+                        git commit -m "Update Kubernetes manifest with new image tag ${IMAGE_TAG}"
+                        git push https://github-username:${GITHUB_TOKEN}@github.com/page-cloud/jenkinsfile-custom-test.git main
+                    """
+                }
+            }
         }
     }
 }
+
